# ariedi

./: .gitignore  README.md  app.json  pyproject.toml  requirements.txt
category/: models.py
category/migrations/: 0001_initial.py
core/: settings.py  urls.py
pages/: forms.py  urls.py  views.py
pages/static/js/: emailform.js
pages/templates/pages/: home.html  presentations.html
projects/: models.py
projects/migrations/: 0001_initial.py  0002_auto_20200103_1721.py  0003_project_image.py  0004_auto_20200107_1223.py  0005_auto_20200107_1437.py  0006_auto_20200220_2134.py
templates/: base.html
templates/includes/: _footer.html  _header.html  _navbar.html  _scripts.html  _styles.html
templates/seo/: robots.txt  sitemap.xml
workshops/: admin.py  models.py  urls.py  views.py
workshops/migrations/: 0001_initial.py  0002_auto_20200220_2138.py  0003_auto_20200227_2223.py
workshops/templates/workshops/: workshop.html
